infra/observability/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: observability
  labels:
    app.kubernetes.io/part-of: homelabs
    app.kubernetes.io/component: observability
    purpose: monitoring
